examples/neg/namer/issue281/missing_type_args.effekt
effect Eff[A] {
  def use(): A
}

def foo(): Int / Eff = 42 // ERROR Wrong number of type arguments

def main() = ()
